      CPUs == #Sockets. CPUs has to be either total number of cores or threads.

NOTE: The FastSchedule option has been removed. The FastSchedule=2 functionality
      (used for testing and development) is available as the new
      SlurmdParameters=config_overrides option.

NOTE: Slurmdbd is now set to fatal if slurmdbd.conf file isn't owned by
      SlurmUser or it's mode is not set to 0600.

HIGHLIGHTS
==========
 -- The example systemd unit files have been changed to the "simple" type of
    operation, and the daemon will now run in the foreground within systemd
    instead of daemonizing itself.
 -- Log messages enabled by the various DebugFlags have been overhauled, and
    will all print at the verbose() level, and prepend the flag name that is
    associated with a given log message.
 -- A separate unversioned libslurm_pmi.so will be installed, and the libpmi.so
    that Slurm can (optionally) install will link to that rather than libslurm.
    This should resolve long-standing issues when building static OpenMPI
    libraries and later updating your Slurm release, thereby breaking the
    embedded libslurm.so.<version> link in those OpenMPI libraries that were
    inherited from libpmi.so.

CONFIGURATION FILE CHANGES (see man appropriate man page for details)
=====================================================================

COMMAND CHANGES (see man pages for details)
===========================================
 -- Make sacct get the UID from database instead of from the username and a
    system call. Add --use-local-uid option to sacct to use old behavior.
 -- The '%s' format in -e/-i/-o options to sbatch will expand to "batch" rather
    than "4294967294".

API CHANGES
===========
 -- slurm_ctl_conf_t has been renamed to slurm_conf_t.
 -- slurm_free_kvs_comm_set() has been renamed to slurm_pmi_free_kvs_comm_set(),
    slurm_get_kvs_comm_set() has been renamed to slurm_pmi_get_kvs_comm_set().