@@ -2104,6 +2104,7 @@ typedef struct {
 typedef struct {
 	uint32_t job_id;
 	List pid_list; /* List of job_step_pids_t *'s */
+	uint32_t step_het_comp; /* het comp or NO_VAL */
 	uint32_t step_id;
 } job_step_pids_response_msg_t;
 
@@ -2117,6 +2118,7 @@ typedef struct {
 typedef struct {
 	uint32_t job_id;	/* job ID */
 	List stats_list;	/* List of job_step_stat_t *'s */
+	uint32_t step_het_comp; /* het comp or NO_VAL */
 	uint32_t step_id;
 } job_step_stat_response_msg_t;
 
@@ -4092,11 +4094,13 @@ extern void slurm_print_job_step_info(FILE *out,
  *
  * IN job_id
  * IN step_id
+ * IN step_het_comp - NO_VAL if not a het step in a normal allocation.
  * RET pointer to a slurm_step_layout_t (free with
  *   slurm_free_step_layout) on success, and NULL on error.
  */
 extern slurm_step_layout_t *slurm_job_step_layout_get(uint32_t job_id,
-						      uint32_t step_id);
+						      uint32_t step_id,
+						      uint32_t step_het_comp);
 
 /*
  * slurm_sprint_job_step_info - output information about a specific Slurm
@@ -4114,12 +4118,14 @@ extern char *slurm_sprint_job_step_info(job_step_info_t *step_ptr,
  *
  * IN job_id
  * IN step_id
+ * IN step_het_comp - NO_VAL if not a het step in a normal allocation.
  * IN node_list, optional, if NULL then all nodes in step are returned.
  * OUT resp
  * RET SLURM_SUCCESS on success SLURM_ERROR else
  */
 extern int slurm_job_step_stat(uint32_t job_id,
 			       uint32_t step_id,
+			       uint32_t step_het_comp,
 			       char *node_list,
 			       uint16_t use_protocol_ver,
 			       job_step_stat_response_msg_t **resp);
@@ -4130,11 +4136,13 @@ extern int slurm_job_step_stat(uint32_t job_id,
  *
  * IN job_id
  * IN step_id
+ * IN step_het_comp - NO_VAL if not a het step in a normal allocation.
  * OUT resp
  * RET SLURM_SUCCESS on success SLURM_ERROR else
  */
 extern int slurm_job_step_get_pids(uint32_t job_id,
 				   uint32_t step_id,
+				   uint32_t step_het_comp,
 				   char *node_list,
 				   job_step_pids_response_msg_t **resp);
 
