@@ -40,11 +40,6 @@
 
 #include "sstat.h"
 
-int _do_stat(uint32_t jobid, uint32_t stepid, char *nodelist,
-	     uint32_t req_cpufreq_min, uint32_t req_cpufreq_max,
-	     uint32_t req_cpufreq_gov,
-	     uint16_t use_protocol_ver);
-
 /*
  * Globals
  */
@@ -111,9 +106,10 @@ List print_fields_list = NULL;
 ListIterator print_fields_itr = NULL;
 int field_count = 0;
 
-int _do_stat(uint32_t jobid, uint32_t stepid, char *nodelist,
-	     uint32_t req_cpufreq_min, uint32_t req_cpufreq_max,
-	     uint32_t req_cpufreq_gov, uint16_t use_protocol_ver)
+static int _do_stat(uint32_t jobid, uint32_t stepid, uint32_t het_comp,
+		    char *nodelist,
+		    uint32_t req_cpufreq_min, uint32_t req_cpufreq_max,
+		    uint32_t req_cpufreq_gov, uint16_t use_protocol_ver)
 {
 	job_step_stat_response_msg_t *step_stat_response = NULL;
 	int rc = SLURM_SUCCESS;
@@ -126,7 +122,8 @@ int _do_stat(uint32_t jobid, uint32_t stepid, char *nodelist,
 	char *ave_usage_tmp = NULL;
 
 	debug("requesting info for job %u.%u", jobid, stepid);
-	if ((rc = slurm_job_step_stat(jobid, stepid, nodelist, use_protocol_ver,
+	if ((rc = slurm_job_step_stat(jobid, stepid, het_comp,
+				      nodelist, use_protocol_ver,
 				      &step_stat_response)) != SLURM_SUCCESS) {
 		if (rc == ESLURM_INVALID_JOB_ID) {
 			debug("job step %u.%u has already completed",
@@ -148,6 +145,7 @@ int _do_stat(uint32_t jobid, uint32_t stepid, char *nodelist,
 
 	step.job_ptr = &job;
 	step.stepid = stepid;
+	step.step_het_comp = het_comp;
 	step.nodes = xmalloc(BUF_SIZE);
 	step.req_cpufreq_min = req_cpufreq_min;
 	step.req_cpufreq_max = req_cpufreq_max;
@@ -259,7 +257,7 @@ int main(int argc, char **argv)
 	uint32_t req_cpufreq_min = NO_VAL;
 	uint32_t req_cpufreq_max = NO_VAL;
 	uint32_t req_cpufreq_gov = NO_VAL;
-	uint32_t stepid = NO_VAL;
+	uint32_t stepid = NO_VAL, het_comp = NO_VAL;
 	slurmdb_selected_step_t *selected_step = NULL;
 
 	slurm_conf_init(NULL);
@@ -325,10 +323,10 @@ int main(int argc, char **argv)
 				      selected_step->jobid);
 				continue;
 			}
-
 			for (i = 0; i < step_ptr->job_step_count; i++) {
 				_do_stat(selected_step->jobid,
 					 step_ptr->job_steps[i].step_id,
+					 step_ptr->job_steps[i].step_het_comp,
 					 step_ptr->job_steps[i].nodes,
 					 step_ptr->job_steps[i].cpu_freq_min,
 					 step_ptr->job_steps[i].cpu_freq_max,
@@ -373,7 +371,7 @@ int main(int argc, char **argv)
 			use_protocol_ver = MIN(SLURM_PROTOCOL_VERSION,
 					       step_info->start_protocol_ver);
 		}
-		_do_stat(selected_step->jobid, stepid, nodelist,
+		_do_stat(selected_step->jobid, stepid, het_comp, nodelist,
 			 req_cpufreq_min, req_cpufreq_max, req_cpufreq_gov,
 			 use_protocol_ver);
 		if (free_nodelist && nodelist)
