@@ -58,3 +58,12 @@ API CHANGES
  -- slurm_ctl_conf_t has been renamed to slurm_conf_t.
  -- slurm_free_kvs_comm_set() has been renamed to slurm_pmi_free_kvs_comm_set(),
     slurm_get_kvs_comm_set() has been renamed to slurm_pmi_get_kvs_comm_set().
+ -- slurm_job_step_layout_get() parameters has changed to add step_het_comp
+    see slurm.h for new implementation.  If not running hetsteps just put
+    NO_VAL as the value.
+ -- slurm_job_step_stat() parameters has changed to add step_het_comp
+    see slurm.h for new implementation.  If not running hetsteps just put
+    NO_VAL as the value.
+ -- slurm_job_step_get_pids() parameters has changed to add step_het_comp
+    see slurm.h for new implementation.  If not running hetsteps just put
+    NO_VAL as the value.
